doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework
-d
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java
<---- end of javadoc command ---->
Loading source file C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java...
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:41: error: class, interface, or enum expected
    public void calcTotalAndMostPopularMethod() throws IOException{
           ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:43: error: class, interface, or enum expected
        char popular = orderList[0].getMethodOfPurchase();
        ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:44: error: class, interface, or enum expected
        char temp = 0;
        ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:45: error: class, interface, or enum expected
        charityTotal = 0;
        ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:46: error: class, interface, or enum expected
        String fridayOutputData = "";
        ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:49: error: class, interface, or enum expected
        for (int i = 0; i < orderList.length ; i++){
        ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:49: error: class, interface, or enum expected
        for (int i = 0; i < orderList.length ; i++){
                        ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:49: error: class, interface, or enum expected
        for (int i = 0; i < orderList.length ; i++){
                                               ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:52: error: class, interface, or enum expected
            switch(orderList[i].getTicketID().charAt(0)){
            ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:56: error: class, interface, or enum expected
                    break;
                    ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:57: error: class, interface, or enum expected
                case 'F':
                ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:60: error: class, interface, or enum expected
                    fridayOutputData += orderList[i].getCSVDetails() + "\n";
                    ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:61: error: class, interface, or enum expected
                    break;
                    ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:62: error: class, interface, or enum expected
            }
            ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:66: error: class, interface, or enum expected
            temp = orderList[i].getMethodOfPurchase();
            ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:67: error: class, interface, or enum expected
            tempCount = 0;
            ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:68: error: class, interface, or enum expected
            for (int j = 1; j < orderList.length; j++){
            ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:68: error: class, interface, or enum expected
            for (int j = 1; j < orderList.length; j++){
                            ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:68: error: class, interface, or enum expected
            for (int j = 1; j < orderList.length; j++){
                                                  ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:71: error: class, interface, or enum expected
                }
                ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:75: error: class, interface, or enum expected
                count = tempCount;
                ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:76: error: class, interface, or enum expected
            }
            ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:81: error: class, interface, or enum expected
        fridaydDataFile.writeCSVtable(fridayOutputData);
        ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:82: error: class, interface, or enum expected
    }
    ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:84: error: class, interface, or enum expected
    public void displayConcertData(){
           ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:87: error: class, interface, or enum expected
        String method = (mostPopularMethod == 'S') ?  "School" : "Website";
        ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:89: error: class, interface, or enum expected
        System.out.println("The most popular method of sales is " + method);
        ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:90: error: class, interface, or enum expected
        System.out.println("The total money raised for charity is £" + charityTotal);
        ^
C:\Users\mackenzie ann brown\Documents\GitHub\Choral-Shield-Coursework\SHOW.java:91: error: class, interface, or enum expected
    }
    ^
29 errors
